# voxel_game_02

./: Cargo.toml  settings.json
assets/blocks/: air.json  cobblestone.json  dirt.json  grass.json  lamp.json  oak_leaves.json  oak_log.json  stone.json  torch.json
assets/models/: air.json  cobblestone.json  cube.json  cube_all.json  cube_all_no_culling.json  cube_column.json  cube_no_culling.json  dirt.json  grass.json  lamp.json  oak_leaves.json  oak_log.json  stone.json  torch.json
src/: application.rs  camera.rs  chunk_position.rs  event.rs  game.rs  game_window.rs  global_resources.rs  global_vector.rs  interval.rs  keybinds.rs  layer.rs  main.rs  relative_vector.rs  render_thread.rs  renderable.rs  settings.rs  setttings.rs  shader.rs  state.rs  texture.rs  thread_work_dispatcher.rs  typemap.rs
src/block/: asset_loader.rs  block_pallet.rs  block_state.rs  light.rs  mod.rs  model.rs  quad_buffer.rs
src/block/model/: block_model_variant.rs  cuboid_block_model.rs  mod.rs  quad_block_model.rs
src/collision/: bounding_box.rs  hitbox.rs  mod.rs
src/gui/: egui_renderer.rs  mod.rs
src/layer/: chunk_rendering_layer.rs  game_logic_layer.rs  game_window_layer.rs  mod.rs
src/shaders/: model.wgsl
src/utils/: bind_group_bundle.rs  index_buffer.rs  mod.rs  render_pipeline_bundle.rs
src/world/: mod.rs  player.rs  region.rs
src/world/chunk/: area.rs  chunk_generator.rs  chunk_layer.rs  chunk_manager.rs  chunk_map.rs  chunk_mesh_map.rs  chunk_part.rs  chunk_renderer.rs  chunks3x3.rs  dynamic_chunk_mesh.rs  dynamic_chunk_model_mesh.rs  dynamic_region_model_mesh.rs  (+1 more)
(+5 files in other folders)
