[package]
name = "voxel_game_02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.4", features = ["rwh_05", "serde"] }
bytemuck = { version = "1.14.3", features = ["derive"] }
image = {version = "0.24.9", features = ["jpeg", "png"] }
anyhow = "1.0.80"
env_logger = "0.10"
log = "0.4"
wgpu = "0.20.0"
pollster = "0.3"
serde_json = "1.0.116"
serde = { version = "1.0.116", features = ["derive", "rc"] }
lazy_static = "1.4"
rayon = "1.10.0"
cgmath = { version = "0.18.0", features = ["serde", "swizzle"] }
rand = "0.8.5"
packed_struct = "0.10.1"
itertools = "0.13.0"
simdnoise = "3.1.6"
hashbrown = "0.14.5"
bitmaps = "3.2.1"
egui-wgpu = "0.28.1"
egui = "0.28.1"
egui-winit = "0.28.1"
